log
Thu 18 Aug 2022 01:50:35 PM UTC: 
 tests:  0|6
total_score: 0/70
b584c3e
Thu 18 Aug 2022 04:52:59 PM UTC: 
 list.c | 24 +++++++++++++++++++-----
 1 file changed, 19 insertions(+), 5 deletions(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:32:18: error: ‘list’ undeclared (first use in this function); did you mean ‘lista’?
   32 |   List* lista = (list*)calloc(1,sizeof(List));
      |                  ^~~~
      |                  lista
list.c:32:18: note: each undeclared identifier is reported only once for each function it appears in
list.c:32:23: error: expected expression before ‘)’ token
   32 |   List* lista = (list*)calloc(1,sizeof(List));
      |                       ^
Compilation failed
5e737b2
Thu 18 Aug 2022 04:53:50 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
bef85c3
Thu 18 Aug 2022 04:55:06 PM UTC: 
 list.c | 7 ++-----
 1 file changed, 2 insertions(+), 5 deletions(-)
 tests:  0|0
c09a64e
Thu 18 Aug 2022 04:59:20 PM UTC: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  0|0
0bd6fa2
Thu 18 Aug 2022 05:00:01 PM UTC: 
 list.c | 9 ++-------
 1 file changed, 2 insertions(+), 7 deletions(-)
 tests:  0|0
c40f8e5
Thu 18 Aug 2022 05:00:22 PM UTC: 
 list.c | 6 +-----
 1 file changed, 1 insertion(+), 5 deletions(-)
 tests:  1|5
total_score: 10/70
af84285
Thu 18 Aug 2022 06:27:44 PM UTC: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:38:25: error: ‘List’ {aka ‘struct List’} has no member named ‘prev’
   38 |     list->current = list->prev;
      |                         ^~
Compilation failed
1390e85
